--- a/exercice5/index.html
+++ b/exercice5/index.html
@@ -8,7 +8,8 @@
         <form>
             <label for="premier_nombre">Premier nombre : </label><input type="text" id="premier_nombre" name="premier_nombre"/><br/>
             <label for="deuxieme_nombre">Deuxième nombre : </label><input type="text" id="deuxieme_nombre" name="deuxieme_nombre"/><br/>
-            <button  id="valider" name ="valider" onclick="multiply()">Valider</button>
+           <!-- exercice 5 <button  id="valider" name ="valider" onclick="multiply()">Valider</button> -->
+            <button  id="valider" name ="valider" onclick="modulo()">Valider</button>
         </form>
         <script src="scripts.js"></script>
     </body>
