--- a/serie2/ex02.html
+++ b/serie2/ex02.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Serie2-Ex01</title>
+    <title>Serie2-Ex2</title>
 </head>
-<body>
-    <button id="submit" name="submit" onclick="surfaceRectangle()">Calculer la surface d'un rectangle</button>
-    <button id="what" name="what" onclick="periRectangle()">Calculer le périmètre d'un rectangle</button>
+<body onload="askRadius()">
+    <button id="what" name="ever" onclick="displayResult()">Calculer la surface d'un cercle</button> 
 </body>
 <script src="scripts.js"></script>
 </html>
