--- a/serie2/ex08.html
+++ b/serie2/ex08.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Serie 2 ex7</title>
+    <title>Serie 2 ex8</title>
 </head>
-<body>
-    <button id="what" name="ever" onclick="faireChoix()">Faites vos jeux!</button> 
+<body onload="choixDansLaDate()">
+    <button id="what" name="ever" onclick="jourSemaine()">Faites vos jeux!</button> 
     <script src="scripts.js"></script>
 </body>
 </html>
