--- a/serie2/ex11.html
+++ b/serie2/ex11.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Serie 2 ex10</title>
+    <title>Serie 2 ex11</title>
 </head>
 <body>
-    <button id="what" name="ever" onclick="somme()">Faites vos jeux!</button> 
+    <button id="what" name="ever" onclick="calculMoyenne()">Faites vos jeux!</button> 
     <script src="scripts.js"></script>
 </body>
 </html>
