make exo bertrand bertrand-proof

--- a/pendu/index.html
+++ b/pendu/index.html
@@ -7,6 +7,8 @@
     <title>Jeu pendu</title>
 </head>
 <body>
+    <label for="premier_nombre">Votre lettre </label><input type="text" id="lettre" name="lettre"/><br/>
+    <button  id="valider" name ="valider">Valider</button>
     <script src="main.js"></script>
 </body>
 </html>
