--- a/pendu/index.html
+++ b/pendu/index.html
@@ -7,6 +7,8 @@
     <title>Jeu pendu</title>
 </head>
 <body>
+    <label for="lettre">Proposez une lettre : </label><input type="text" name="lettre" id="lettre"/>
+    <button  name="btn" id="btn">Valider</button>
     <script src="main.js"></script>
 </body>
 </html>
