add html, remove html generation from js

--- a/pendu/index.html
+++ b/pendu/index.html
@@ -7,8 +7,15 @@
     <title>Jeu pendu</title>
 </head>
 <body>
-    <label for="lettre">Proposez une lettre : </label><input type="text" name="lettre" id="lettre"/>
-    <button  name="btn" id="btn">Valider</button>
+    <section id="inputArea"> 
+        <label for="lettre">Proposez une lettre : </label><input type="text" name="lettre" id="lettre"/>
+        <button  name="btn" id="btn">Valider</button>
+    </section>
+    <section>
+        <p id="solution">Solution</p>
+        <p id="wrongGuesses">Wrong guesses</p>
+        <p id="allGuesses">All guesses</p>
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
