add panzer image

--- a/pendu/index.html
+++ b/pendu/index.html
@@ -23,7 +23,7 @@
         <p id="allGuesses">All guesses</p>
     </section>
     <section id="lossCountdown">
-        <div>Panzerknacker Image</div>
+        <div class="panzer">Panzerknacker Image</div>
     </section>
     <footer>Design by MrSheep Games - 2018</footer>
     <script src="main.js"></script>
