--- a/Objets/index.html
+++ b/Objets/index.html
@@ -7,6 +7,7 @@
     <title>Exo Objet</title>
 </head>
 <body>
+    <blockquote id="quote"></blockquote>
     <script src="scripts.js"></script>
 </body>
 </html>
