--- a/jQuery/jQuery/jquery-exercises-base1/exercice 9/index.html
+++ b/jQuery/jQuery/jquery-exercises-base1/exercice 9/index.html
@@ -17,6 +17,8 @@
   </div>
   <script>
     //Ecrire le JQuery ici
+    $("#texte_1, #texte_3").css('border','5px dashed green');
+   
   </script>
 </body>
 </html>
