--- a/jQuery/jQuery/jquery-exercises-base2/Exercice_1/index.html
+++ b/jQuery/jQuery/jquery-exercises-base2/Exercice_1/index.html
@@ -10,6 +10,7 @@
     <button type="button" name="button" id="clique-moi" >Clique-moi !</button>
   </form>
   <script>
+    $('#clique-moi').click(()=>{alert("boring!")})
 
   </script>
 </body>
