--- a/jQuery/jQuery/jquery-exercises-base2/Exercice_2/index.html
+++ b/jQuery/jQuery/jquery-exercises-base2/Exercice_2/index.html
@@ -8,7 +8,7 @@
   <body>
       <img src="images/image.jpg" id="image" />
       <script>
-
+        $('img').dblclick(()=>{document.getElementById("image").setAttribute("width", "500px")})
       </script>
   </body>
 </html>
