--- a/jQuery/jQuery/jquery-exercises-base2/Exercice_4/index.html
+++ b/jQuery/jQuery/jquery-exercises-base2/Exercice_4/index.html
@@ -16,7 +16,9 @@
   <div class="color blue" id="blue"></div>
 </div>
 <script>
-
+  $("#green").click(()=>{$("#texte").css("color","green")});
+  $("#red").click(()=>{$("#texte").css("color","red")});
+  $("#blue").click(()=>{$("#texte").css("color","blue")});
 </script>
 </body>
 </html>
