--- a/jQuery/jQuery/jquery-exercises-base2/Exercice_6/index.html
+++ b/jQuery/jQuery/jquery-exercises-base2/Exercice_6/index.html
@@ -16,7 +16,9 @@
   <div class="color blue" id="blue"></div>
 </div>
 <script>
-
+  $("#green").hover(()=>{$("#texte").css("color","green")},()=>{$("#texte").css("color","black")});
+  $("#red").hover(()=>{$("#texte").css("color","red")},()=>{$("#texte").css("color","black")});
+  $("#blue").hover(()=>{$("#texte").css("color","blue")},()=>{$("#texte").css("color","black")});
 </script>
 </body>
 </html>
