--- a/pendu/index.html
+++ b/pendu/index.html
@@ -8,7 +8,7 @@
     <title>Jeu pendu</title>
 </head>
 <body>
-    <header>Die Panzerknacker Geheimnes Code</header>
+    <header><h1>Die Panzerknacker Geheimnes Code</h1></header>
     <section id="intro">
         <p>Die Panzerknacker willen Onkel Dagoberts geld stielen. Sie haben eine super moderne Maschine gebaut. Herr Düsentrieb kan die Maschine ausschalten aber er braucht den geheimnes Code von die Panzerknacker. Hilfe Trick, Tripp und Trapp den Code finden bevor die Panzerkancker wieder zu Hause kommen!</p>
         <button  name="start" id="start">Start</button>
