--- a/pendu/index.html
+++ b/pendu/index.html
@@ -39,7 +39,7 @@
         </div>
     </section>
     <section class="section level">
-        <p class="level-item has-text-centered" id="solution"></p>
+        <p class="level-item has-text-centered" id="solution">Lösung: </p>
         <p class="level-item has-text-centered" id="wrongGuesses">Falsche Buchstaben:  </p>
         <p class="level-item has-text-centered" id="allGuesses">Alle Buchstaben:  </p>
     </section>
