--- a/pendu/index.html
+++ b/pendu/index.html
@@ -22,7 +22,7 @@
                 <img id="raptout" src="./assets/images/Panzerknacker.png">
             </figure>
         </div>
-        <p class="level-item" id="scenario">Die Panzerknacker willen Onkel Dagoberts geld stielen. Sie haben eine super moderne Maschine gebaut. Herr Düsentrieb kan die Maschine ausschalten aber er braucht den geheimnes Code von die Panzerknacker. Hilfe Trick, Tripp und Trapp den Code finden bevor die Panzerkancker wieder zu Hause kommen!</p>
+        <p class="level-item" id="scenario">Die Panzerknacker willen Onkel Dagoberts geld stielen. Sie haben eine super moderne Maschine gebaut. Herr Düsentrieb kan die Maschine ausschalten aber er braucht den geheimnes Code von die Panzerknacker. Hilfe Trick, Tripp und Trapp den Code finden bevor die Panzerknacker wieder zu Hause kommen!</p>
        <!--<div class="container has-text-centered" id="startWrap">
             <button class="button" name="start" id="start">Spielen!</button>
         </div>-->
@@ -44,6 +44,7 @@
         <p class="level-item has-text-centered" id="allGuesses">Alle Buchstaben:  </p>
     </section>
     <footer class="footer has-text-centered">Design by MrSheep Games - 2018</footer>
+    <script type="module" src="api.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
