--- a/pendu/index.html
+++ b/pendu/index.html
@@ -45,7 +45,7 @@
     </section>
     <footer class="footer has-text-centered">Design by MrSheep Games - 2018</footer>
     <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
-    <script type="module" src="api.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
+    <script src="api.js" type="module"></script>
 </body>
 </html>
